# PAV_detector

./: .env.example  .gitignore  README.md  commands.txt  dataset.csv  pyproject.toml  requirements.txt  run_workbench.py
scripts/: bootstrap_db.py  setup.sh
src/pav_detector/: __init__.py  config.py
src/pav_detector/api/: app.py
src/pav_detector/core/: __init__.py  decision.py  inference.py  preprocessing.py  scaler.py  schemas.py  service.py
src/pav_detector/db/: init_db.py  postgres.py
src/pav_detector/offline/: cicflow.py  run_offline.py
src/pav_detector/train/: __init__.py  train_model.py
src/pav_detector/ui/: alert_demo_app.py  streamlit_app.py  workbench_app.py
src/pav_detector/utils/: logging_json.py
windows/: install_windows.bat  start_workbench.bat  start_workbench.vbs
